[gd_scene load_steps=2 format=3 uid="uid://lcnei3edi0r3"]

[ext_resource type="Script" path="res://main.gd" id="1_ttf1p"]

[node name="Main" type="Node2D"]
script = ExtResource("1_ttf1p")

[node name="Add word" type="HBoxContainer" parent="."]
offset_right = 798.0
offset_bottom = 31.0

[node name="Word added" type="LineEdit" parent="Add word"]
layout_mode = 2
placeholder_text = "Word to add to dictionnary"
expand_to_text_length = true

[node name="Button" type="Button" parent="Add word"]
layout_mode = 2
text = "Add"

[node name="Button Message" type="Label" parent="Add word"]
layout_mode = 2

[node name="Word interactor" type="HBoxContainer" parent="."]
offset_top = 40.0
offset_right = 273.0
offset_bottom = 71.0

[node name="Random Words" type="Button" parent="Word interactor"]
layout_mode = 2
text = "Get random words"

[node name="Word option list" type="OptionButton" parent="Word interactor"]
layout_mode = 2

[node name="Delete word" type="Button" parent="Word interactor"]
layout_mode = 2
text = "Delete a word"

[node name="Select dictionnary" type="Button" parent="Word interactor"]
layout_mode = 2
text = "Select JSON dictionnary"

[node name="Wordlist" type="RichTextLabel" parent="."]
offset_left = 15.0
offset_top = 96.0
offset_right = 1138.0
offset_bottom = 416.0
focus_mode = 2
selection_enabled = true

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(600, 300)
ok_button_text = "Open"
file_mode = 0

[connection signal="pressed" from="Add word/Button" to="." method="_on_add_word_button_pressed"]
[connection signal="pressed" from="Word interactor/Random Words" to="." method="_on_random_words_pressed"]
[connection signal="pressed" from="Word interactor/Delete word" to="." method="_on_delete_word_pressed"]
[connection signal="pressed" from="Word interactor/Select dictionnary" to="." method="_on_select_JSON_dictionnary_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
